--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,16 @@
-<h1>トップページ</h1>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+      <h1 class=pt-3>welcome to <i class="fa-solid fa-book"></i><strong>Bookers</strong>!!</h1>
+      <p>In <i class="fa-solid fa-book"></i><strong>Bookers</strong>,</p>
+      <p>you can share and exchange your opinions , inpressions , and emotions</p>
+      <p>about various books!</p>
+      <div class="row">
+        <div class="col-10 mx-auto">
+          <%= link_to "Log in", new_user_session_path, class:"btn btn-block btn-info mb-3" %>
+          <%= link_to "Sign up", new_user_registration_path, class:"btn btn-block btn-success mb-3" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
