--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="row">
-    <p class="mx-auto">CopyRight Infratop.inc</p>
+    <p class="mx-auto py-5">CopyRight Infratop.inc</p>
   </div>
 </div>
