--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
 
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-      <table class="table">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th></th>
@@ -20,15 +20,17 @@
             <th>Opinion</th>
           </tr>
         </thead>
-      <% @books.each do |book| %>
+
         <tbody>
+          <% @books.each do |book| %>
           <tr>
-            <tb></tb>
-            <tb><%= book.title %></tb>
-            <tb><%= book.body %></tb>
+            <td></td>
+            <td><%= book.title %></td>
+            <td><%= book.body %></td>
           </tr>
+          <% end %>
         </tbody>
-      <% end %>
+
       </table>
     </div>
   </div>
