--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,8 @@
-<h1>Books index</h1>
-
 <div class="container">
   <div class="row">
 
     <div class="col-md-3">
-      <h2>User info</h2>
+      <%= render 'users/user_info', user: @user %>
 
       <%= render 'books/new', book:Book.new %>
     </div>
@@ -24,8 +22,16 @@
         <tbody>
           <% @books.each do |book| %>
           <tr>
-            <td></td>
-            <td><%= book.title %></td>
+            <td>
+              <%= link_to user_path(book.user.id) do %>
+                <%= image_tag book.user.get_profile_image(100, 100)%>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(book.id) do %>
+                <%= book.title %>
+              <% end %>
+            </td>
             <td><%= book.body %></td>
           </tr>
           <% end %>
