--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,45 @@
 <h1>Users#index</h1>
 
+<div class="container">
+  <div class="row">
+
+    <div class="col-md-3">
+      <%= render 'users/user_info', user: @user %>
+
+      <%= render 'books/new', book:Book.new %>
+    </div>
+
+
+    <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @users.each do |user| %>
+          <tr>
+            <td>
+              <%= link_to user_path(user.id) do %>
+                <%= image_tag user.get_profile_image(100, 100)%>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to user_path(user.id) do %>
+                <%= user.name %>
+              <% end %>
+            </td>
+            <td><%= link_to "Show", user_path(user.id) %></td>
+          </tr>
+          <% end %>
+        </tbody>
+
+      </table>
+    </div>
+  </div>
+</div>
