--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,7 +16,8 @@
           <tr>
             <td>
               <%= link_to user_path(book.user.id) do %>
-                <%= image_tag book.user.get_profile_image(100, 100)%>
+                <%= image_tag book.user.get_profile_image(100, 100)%><br>
+                <%= @user.name %>
               <% end %>
             </td>
             <td>
@@ -25,8 +26,8 @@
               <% end %>
             </td>
             <td><%= book.body %></td>
-            <td><%= link_to "Edit", edit_book_path(book.id),class:"btn btn-success md-3" %></td>
-            <td><%= link_to "Destroy", book_path(book.id), method: :delete,class:"btn btn-danger md-3" %></td>
+            <td><%= link_to "Edit", edit_book_path(book.id), class:"btn btn-success md-3" %></td>
+            <td><%= link_to "Destroy", books_path, method: :delete, class:"btn btn-danger md-3" %></td>
           </tr>
           <% end %>
         </tbody>
