--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
 
   <body>
   <%= render 'layouts/header' %>
-
+  <main>
     <%= yield %>
+  </main>
 
   <%= render 'layouts/footer' %>
   </body>
