--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,12 +4,12 @@
       <h2>User info</h2>
 
       <%= form_with model: @user do |f| %>
-        <p>Name</p>
-        <%= f.text_field :name %>
-        <p>Image</p>
-        <%= f.file_field :profile_image, accept: "image/*" %>
-        <p>Introduction</p>
-        <%= f.text_area :introduction %><br>
+        <label for="userName">Name</label><br>
+        <%= f.text_field :name, autoforcus: true, id:"userName" %><br>
+        <label for="userImage">Image</label><br>
+        <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %><br>
+        <label for="userIntro">Introduction</label><br>
+        <%= f.text_area :introduction, autoforcus: true, id:"userIntro" %><br>
         <%= f.submit 'Update User', class:"btn btn-secondary" %>
       <% end %>
 
