--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,4 @@
-<h1>Users#index</h1>
-
-<div class="container">
+<div class="container px-5 px-sm-0">
   <div class="row">
 
     <div class="col-md-3">
