--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,6 +2,17 @@
   <%= flash[:notice] %>
 </div>
 
+<div>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+</div>
+
 <div class="container px-5 px-sm-0">
   <div class="row">
 
