--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,21 @@
 <div class="container">
+
+
+
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>Editing Book</h2>
+
+        <div>
+          <% if @book.errors.any? %>
+            <%= @book.errors.count %>errors prohibited this obj from being saved:
+            <ul>
+              <% @book.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
+        </div>
 
       <%= form_with model: @book do |f| %>
         <label for="bookTitle">Title</label><br>
