--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,6 +3,17 @@
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
 
+        <div>
+          <% if @user.errors.any? %>
+            <%= @user.errors.count %>errors prohibited this obj from being saved:
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
+        </div>
+
       <%= form_with model: @user do |f| %>
         <label for="userName">Name</label><br>
         <%= f.text_field :name, autoforcus: true, id:"userName" %><br>
