--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,15 +1,17 @@
-<div>
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this obj from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-</div>
-
 <div class="container px-5 px-sm-0">
+
+  <div>
+  <% if @book.errors.any? %>
+    <h4><%= @book.errors.count %>errors prohibited this obj from being saved:</h4>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  </div>
+
+
   <div class="row">
 
     <div class="col-md-3">
@@ -23,24 +25,22 @@
       <h2>Book detail</h2>
       <table class="table table-hover">
         <tbody>
-          <% @books.each do |book| %>
           <tr>
             <td>
-              <%= link_to user_path(book.user.id) do %>
-                <%= image_tag book.user.get_profile_image(100, 100)%><br>
+              <%= link_to user_path(@books.user.id) do %>
+                <%= image_tag @books.user.get_profile_image(100, 100)%><br>
                 <%= @user.name %>
               <% end %>
             </td>
             <td>
-              <%= link_to book_path(book.id) do %>
-                <%= book.title %>
+              <%= link_to book_path(@books.id) do %>
+                <%= @books.title %>
               <% end %>
             </td>
-            <td><%= book.body %></td>
-            <td><%= link_to "Edit", edit_book_path(book.id), class:"btn btn-success md-3" %></td>
+            <td><%= @books.body %></td>
+            <td><%= link_to "Edit", edit_book_path(@books.id), class:"btn btn-success md-3" %></td>
             <td><%= link_to "Destroy", book_path, method: :delete, "data-confirm" => "本当に消しますか？",class:"btn btn-danger md-3" %></td>
           </tr>
-          <% end %>
         </tbody>
 
       </table>
