--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
 
         <div>
           <% if @user.errors.any? %>
-            <%= @user.errors.count %>errors prohibited this obj from being saved:
+            <h4><%= @user.errors.count %>errors prohibited this obj from being saved:</h4>
             <ul>
               <% @user.errors.full_messages.each do |message| %>
                 <li><%= message %></li>
