--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,8 +38,10 @@
               <% end %>
             </td>
             <td><%= @books.body %></td>
+            <% if @books.user == current_user %>
             <td><%= link_to "Edit", edit_book_path(@books.id), class:"btn btn-success md-3" %></td>
             <td><%= link_to "Destroy", book_path, method: :delete, "data-confirm" => "本当に消しますか？",class:"btn btn-danger md-3" %></td>
+            <% end %>
           </tr>
         </tbody>
 
