--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -5,7 +5,7 @@
   <tbody>
     <tr>
       <th>name</th>
-      <th><%= current_user.name %></th>
+      <th><%= user.name %></th>
     </tr>
     <tr>
       <th>introduction</th>
