--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
         </li>
         <li class="nav-item">
           <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
-           <i class="fa-solid fa-right-from-bracket"></i> Log out
+           <i class="fa-solid fa-sign-out-alt"></i> Log out
           <% end %>
         </li>
       <% else %>
