--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -16,6 +16,6 @@
 
 <div class="row">
   <%= link_to edit_user_path(user.id), class:"btn btn-block btn-outline-secondary mb-3" do %>
-    <i class="fa-solid fa-user-gear"></i>
+    <i class="fa-solid fa-user-cog"></i>
   <% end %>
 </div>
