--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -1,8 +1,8 @@
 <h2 class="mt-3">New book</h2>
 <%= form_with model: @book do |f| %>
     <p>Title</p>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control book_title' %>
     <p>Opinion</p>
-    <%= f.text_area :body %><br>
+    <%= f.text_area :body, class: 'form-control book_body' %><br>
   <%= f.submit 'Create Book', class:"btn btn-success" %>
 <% end %>
