--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,7 @@
 <div class="container">
-
-
-
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h2>Editing Book</h2>
+      <h2 class="mt-3">Editing Book</h2>
 
         <div>
           <% if @book.errors.any? %>
@@ -19,9 +16,9 @@
 
       <%= form_with model: @book do |f| %>
         <label for="bookTitle">Title</label><br>
-        <%= f.text_field :title, autofocus: true, id:"bookTitle" %><br>
+        <%= f.text_field :title, autofocus: true, id:"bookTitle", class: 'form-control book_title' %><br>
         <label for="bookOpinion">Opinion</label><br>
-        <%= f.text_area :body, autofocus: true, id:"bookOpinion" %><br>
+        <%= f.text_area :body, autofocus: true, id:"bookOpinion", class: 'form-control book_body' %><br>
         <%= f.submit 'Update Book', class:"btn btn-success" %><br>
 
         <%= link_to "Show", book_path(@book.id) %>
