--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,13 +20,15 @@
 
 
     <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
+      <h2 class="mt-3">Books</h2>
       <table class="table table-hover">
         <thead>
           <tr>
             <th></th>
             <th>Title</th>
             <th>Opinion</th>
+            <th></th>
+            <th></th>
           </tr>
         </thead>
 
@@ -35,7 +37,7 @@
           <tr>
             <td>
               <%= link_to user_path(book.user.id) do %>
-                <%= image_tag book.user.get_profile_image(100, 100)%>
+                <%= image_tag book.user.get_profile_image(80, 80)%>
               <% end %>
             </td>
             <td>
@@ -44,6 +46,21 @@
               <% end %>
             </td>
             <td><%= book.body %></td>
+            <td>
+              <% if book.favorited_by?(current_user) %>
+                <%= link_to book_favorites_path(book), method: :delete do %>
+                  <i class="fa-solid fa-heart"></i>
+                <% end %>
+              <% else %>
+                <%= link_to book_favorites_path(book), method: :post do %>
+                  <i class="fa-regular fa-heart"></i>
+                <% end %>
+              <% end %>
+              <%= book.favorites.count %>
+            </td>
+            <td>
+             コメント数：<%= book.book_comments.count %>
+            </td>
           </tr>
           <% end %>
         </tbody>
