--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
     </ul>
   <% end %>
   </div>
-  
+
   <div class="row">
 
     <div class="col-md-3">
@@ -20,13 +20,13 @@
 
 
     <div class="col-md-8 offset-md-1">
-      <h2>Book detail</h2>
+      <h2 class="mt-3">Book detail</h2>
       <table class="table table-hover">
         <tbody>
           <tr>
             <td>
               <%= link_to user_path(@books.user.id) do %>
-                <%= image_tag @books.user.get_profile_image(100, 100)%><br>
+                <%= image_tag @books.user.get_profile_image(80, 80)%><br>
                 <%= @user.name %>
               <% end %>
             </td>
@@ -36,14 +36,29 @@
               <% end %>
             </td>
             <td><%= @books.body %></td>
+            <td>
+              <% if @books.favorited_by?(current_user) %>
+                <%= link_to book_favorites_path(@books), method: :delete do %>
+                  <i class="fa-solid fa-heart"></i>
+                <% end %>
+              <% else %>
+                <%= link_to book_favorites_path(@books), method: :post do %>
+                  <i class="fa-regular fa-heart"></i>
+                <% end %>
+              <% end %>
+              <%= @books.favorites.count %>
+            </td>
+            <td>
+              コメント数：<%= @books.book_comments.count %>
+            </td>
             <% if @books.user == current_user %>
             <td><%= link_to "Edit", edit_book_path(@books.id), class:"btn btn-success md-3" %></td>
             <td><%= link_to "Destroy", book_path, method: :delete, "data-confirm" => "本当に消しますか？",class:"btn btn-danger md-3" %></td>
             <% end %>
           </tr>
         </tbody>
-
       </table>
+      <%= render 'book_comments/comment', books: @books, book_comment: @book_comment %>
     </div>
   </div>
 </div>
