--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
 
 
     <div class="col-md-8 offset-md-1">
-      <h2>Users</h2>
+      <h2 class="mt-3">Users</h2>
       <table class="table table-hover">
         <thead>
           <tr>
@@ -23,7 +23,7 @@
           <% @users.each do |user| %>
           <tr>
             <td>
-                <%= image_tag user.get_profile_image(100, 100)%>
+                <%= image_tag user.get_profile_image(80, 80)%>
             </td>
             <td>
                 <%= user.name %>
