--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
 
 
     <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
+      <h2 class="mt-3">Books</h2>
       <table class="table table-hover">
         <thead>
           <tr>
@@ -24,7 +24,7 @@
           <tr>
             <td>
               <%= link_to user_path(book.user.id) do %>
-                <%= image_tag book.user.get_profile_image(100, 100)%>
+                <%= image_tag book.user.get_profile_image(80, 80)%>
               <% end %>
             </td>
             <td>
