--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -11,10 +11,36 @@
       <th>introduction</th>
       <th><%= user.introduction %></th>
     </tr>
+    <tr>
+      <th>Follows</th>
+      <th>
+        <%= link_to follows_user_path(user) do %>
+        <%= user.followers.count %>
+        <% end %>
+      </th>
+    </tr>
+    <tr>
+      <th>Followers</th>
+      <th>
+        <%= link_to followers_user_path(user) do %>
+        <%= user.followeds.count %>
+        <% end %>
+      </th>
+    </tr>
   </tbody>
 </table>
 
 <div class="row">
+  <% if current_user != user %>
+    <% if current_user.following?(user) %>
+      <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-block btn-danger" %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-block btn-success" %>
+    <% end %>
+  <% end %>
+</div>
+
+<div class="row mt-3">
   <%= link_to edit_user_path(user.id), class:"btn btn-block btn-outline-secondary mb-3" do %>
     <i class="fa-solid fa-user-cog"></i>
   <% end %>
