--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,13 +22,14 @@
         <tbody>
           <% @users.each do |user| %>
           <tr>
-            <td>
-                <%= image_tag user.get_profile_image(80, 80)%>
-            </td>
-            <td>
-                <%= user.name %>
-            </td>
+            <td><%= image_tag user.get_profile_image(80, 80)%></td>
+            <td><%= user.name %></td>
             <td><%= link_to "Show", user_path(user.id) %></td>
+            <td>フォロー<%= user.followers.count %></td>
+            <td>フォロワー<%= user.followeds.count %></td>
+            <td>
+              <%= render 'relationships/follow_btn', user: user %>
+            </td>
           </tr>
           <% end %>
         </tbody>
