--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsNewBookers2</title>
+    <title>Bookers2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,7 +13,7 @@
 
   <body>
   <%= render 'layouts/header' %>
-  
+
   <main>
     <% flash.each do |message_type, message| %>
       <%= content_tag :div, message, class: message_type %>
