--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -3,7 +3,7 @@
 
     <table class="table table-hover table-inverse">
       <!--検索対象モデルがUserの時 -->
-      <% if @model == "User" %>
+      <% if @model == "user" %>
       <h2>Users search for "<%= @content %>"</h2>
         <thead>
           <tr>
@@ -13,10 +13,11 @@
           </tr>
         </thead>
         <tbody>
-          <% @users.each do |user| %>
+          <% @records.each do |user| %>
             <tr>
               <td><%= image_tag user.get_profile_image(50, 50) %></td>
               <td><%= user.name %></td>
+              <td><%= link_to "show", user_path(user.id) %></td>
             </tr>
           <% end %>
         </tbody>
@@ -26,12 +27,12 @@
           <tr>
             <th></th>
             <th>Title</th>
-            <th>opinion</th>
+            <th>Opinion</th>
 
           </tr>
         <tbody>
             <h2>Books search for "<%= @content %>"</h2>
-            <% @books.each do |book| %>
+            <% @records.each do |book| %>
               <tr>
                 <td>
                   <%= link_to user_path(book.user) do %>
