--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div>
-
+  <p>コメント一覧</p>
     <table class="table table-hover">
       <tbody>
         <% books.book_comments.each do |book_comment| %>
