--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,9 @@
 
 
     <div class="col-md-8 offset-md-1">
+      <div class="mt-3 mb-2">
+        <%= render "searches/search_form" %>
+      </div>
       <h2 class="mt-3">Books</h2>
       <table class="table table-hover">
         <thead>
