--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,35 +1,29 @@
-<div>
-  <p>コメント一覧</p>
-    <table class="table table-hover">
-      <tbody>
-        <% books.book_comments.each do |book_comment| %>
-        <tr>
-          <td>
-            <%= link_to user_path(book_comment.user.id) do %>
-              <%= image_tag book_comment.user.get_profile_image(50, 50) %><br>
-              <%= book_comment.user.name %>
-            <% end %>
-          </td>
-          <td>
-            <%= book_comment.comment %>
-          </td>
-          <td>
-            <% if book_comment.user == current_user %>
-              <%= link_to "Destroy", book_book_comment_path(book_comment.book.id, book_comment.id), method: :delete, "data-confirm" => "本当に消しますか？",class:"btn btn-danger md-3" %>
-            <% end %>
-          </td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-</div>
+<p>コメント一覧</p>
+  <table class="table table-hover">
+    <tbody>
+      <% book.book_comments.each do |book_comment| %>
+      <tr>
+        <td>
+          <%= link_to user_path(book_comment.user.id) do %>
+            <%= image_tag book_comment.user.get_profile_image(50, 50) %><br>
+            <%= book_comment.user.name %>
+          <% end %>
+        </td>
+        <td>
+          <%= book_comment.comment %>
+        </td>
+        <td>
+          <% if book_comment.user == current_user %>
+            <%= link_to "Destroy", book_book_comment_path(book_comment.book.id, book_comment.id), method: :delete, class:"btn btn-danger md-3", remote:true, data: {"turbolinks" => false}  %>
+          <% end %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<div>
-  <%= form_with model: [books, book_comment] do |f| %>
-    <%= f.text_area :comment, rows:'5', class: 'form-control book_body' %>
-    <%= f.submit "送信" %>
-  <% end %>
-</div>
+
+
 
 
 
