--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,7 +13,7 @@
 
   <div class="row">
     <div class="col-md-3">
-      <%= render 'users/user_info', user: @user %>
+      <%= render 'users/user_info', user: current_user %>
 
       <%= render 'books/new', book:Book.new %>
     </div>
