--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -31,13 +31,20 @@
 </table>
 
 <div class="row">
-  <% if current_user != user %>
-    <% if current_user.following?(user) %>
-      <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-block btn-danger" %>
-    <% else %>
-      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-block btn-success" %>
+  <div class="col-6">
+    <% if current_user != user %>
+      <% if current_user.following?(user) %>
+        <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-block btn-danger" %>
+      <% else %>
+        <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-block btn-success" %>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
+  <div class="col-6">
+    <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+      <%= link_to 'chatを始める', message_path(user.id) %>
+    <% end %>
+  </div>
 </div>
 
 <div class="row mt-3">
