--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-md-3">
-      <%= render 'users/user_info', user: @user %>
+      <%= render 'users/user_info', user: @user, isRoom: @isRoom, roomId: @roomId, room: @room, entry: @entry %>
       <%= render 'books/new', book:Book.new %>
     </div>
 
