--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -60,6 +60,9 @@
             <td>
               閲覧数：<%= book.read_counts.count %>
             </td>
+            <td>
+              <%= render "books/static.rate", book: book %>
+            </td>
           </tr>
           <% end %>
         </tbody>
