--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -1,8 +1,35 @@
 <h2 class="mt-3">New book</h2>
-<%= form_with model: @book do |f| %>
+<%= form_with model: book do |f| %>
     <p>Title</p>
     <%= f.text_field :title, class: 'form-control book_title' %>
     <p>Opinion</p>
     <%= f.text_area :body, class: 'form-control book_body' %><br>
+    
+    <% if book.id.nil? %>
+    <div class="form-group" id="star">
+      <%= f.label :star %>
+      <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
+      <div id="post_raty"></div>
+    </div>
+    <script>
+      $(document).on('turbolinks:load', function() {
+        let elem = document.querySelector('#post_raty');
+        if (elem == null) return;
+  
+        elem.innerHTML = ""
+        let opt = {  
+          starOn: "<%= asset_path('star-on.png') %>",
+          starOff: "<%= asset_path('star-off.png') %>",
+          starHalf: "<%= asset_path('star-half.png') %>",
+          scoreName: 'book[star]',
+        };
+        raty(elem, opt);
+      });
+    </script>
+  <% else %>
+    <div class="form-group">
+      <%= render "static_rate", book: book %>
+    </div>
+  <% end %>
   <%= f.submit 'Create Book', class:"btn btn-success" %>
 <% end %>
