--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -45,6 +45,9 @@
             <td>
               閲覧数：<%= @books.read_counts.count %>
             </td>
+            <td>
+              <%= render "books/static.rate", book: @books %>
+            </td>
             <% if @books.user == current_user %>
             <td><%= link_to "Edit", edit_book_path(@books.id), class:"btn btn-success md-3" %></td>
             <td><%= link_to "Destroy", book_path, method: :delete, "data-confirm" => "本当に消しますか？",class:"btn btn-danger md-3" %></td>
