--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,7 +24,9 @@
         <%= render "searches/search_form" %>
       </div>
       <h2 class="mt-3">Books</h2>
-
+      <%= link_to '新しい順', books_path(latest: "true") %>
+      |<%= link_to '古い順', books_path(old: "true") %>
+      |<%= link_to '評価の高い順', books_path(star_count: "true") %>
       <table class="table table-hover">
         <thead>
           <tr>
