--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,7 @@
             <th></th>
             <th>Title</th>
             <th>Opinion</th>
+            <th>Tag</th>
           </tr>
         </thead>
 
@@ -35,6 +36,7 @@
               <% end %>
             </td>
             <td><%= book.body %></td>
+            <td><%= book.tag %></td>
           </tr>
           <% end %>
         </tbody>
