--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,16 +23,33 @@
       <div class="mt-3 mb-2">
         <%= render "searches/search_form" %>
       </div>
-      <h2 class="mt-3">Books</h2>
-      <%= link_to '新しい順', books_path(latest: "true") %>
-      |<%= link_to '古い順', books_path(old: "true") %>
-      |<%= link_to '評価の高い順', books_path(star_count: "true") %>
+      <div class="row">
+        <div class="col">
+          <h2 class="mt-3">Books</h2>
+        </div>
+        <div class="col">
+          <div class="dropdown mt-3">
+            <button class="btn btn-info dropdown-toggle float-right btn-sm" type="button" data-toggle="dropdown" aria-expanded="false">
+              並び替え
+            </button>
+            <div class="dropdown-menu">
+              <%= link_to '新しい順', books_path(latest: "true"), class: 'dropdown-item' %>
+              <%= link_to '古い順', books_path(old: "true"), class: 'dropdown-item' %>
+              <%= link_to '評価の高い順', books_path(star_count: "true"), class: 'dropdown-item' %>
+              <%= link_to 'いいねの多い順', books_path(most_favorited: "true"), class: 'dropdown-item' %>
+            </div>
+          </div>
+        </div>
+      </div>
       <table class="table table-hover">
         <thead>
           <tr>
             <th></th>
             <th>Title</th>
             <th>Opinion</th>
+            <th>Tag</th>
+            <th></th>
+            <th></th>
             <th></th>
             <th></th>
           </tr>
@@ -52,6 +69,7 @@
               <% end %>
             </td>
             <td><%= book.body %></td>
+            <td><%= book.tag %></td>
             <!--いいね機能ajax-partial-->
             <td id="favorite_buttons_<%= book.id %>">
               <%= render "favorites/favorites", book: book %>
