[Add] クリックで検索可能にした

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -69,7 +69,11 @@
               <% end %>
             </td>
             <td><%= book.body %></td>
-            <td><%= book.tag %></td>
+            <td>
+              <%= link_to search_path(content: book.tag) do %>
+                <%= book.tag %>
+              <% end %>
+            </td>
             <!--いいね機能ajax-partial-->
             <td id="favorite_buttons_<%= book.id %>">
               <%= render "favorites/favorites", book: book %>
