--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -67,6 +67,7 @@
             <th></th>
             <th></th>
             <th></th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -81,7 +82,11 @@
               </td>
               <td><%= link_to book.title , book_path(book.id) %></td>
               <td><%= book.body %></td>
-              <td><%= book.tag %></td>
+              <td>
+                <%= link_to search_path(content: book.tag) do %>
+                  <%= book.tag %>
+                <% end %>
+              </td>
               <td id="favorite_buttons_<%= book.id %>">
                 <%= render "favorites/favorites", book: book %>
               </td>
