--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
               <% end %>
             </td>
             <td><%= book.body %></td>
-            <td><%= book.tag %></td>
+            <td><%=link_to book.tag, search_path%></td>
           </tr>
           <% end %>
         </tbody>
