--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,10 +40,10 @@
               <%= render "favorites/favorites", book: @books %>
             </td>
             <td id="comment_counter">
-              コメント数：<%= @books.book_comments.count %>
+              <i class="fa-regular fa-comment"></i><%= @books.book_comments.count %>
             </td>
             <td>
-              閲覧数：<%= @books.read_counts.count %>
+              <i class="fa-regular fa-eye"></i><%= @books.read_counts.count %>
             </td>
             <td>
               <%= render "books/static.rate", book: @books %>
