--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,3 +1,3 @@
-$('#message').append("<% if @message.user_id == current_user.id %><p style='text-align: right;'><%= @message.content %></p><% else %><p style='text-align: left;'><%= @message.content %></p><% end %>");
+$('.messages').append("<%= j render "messages/index", message: @message %>");
 <!--$('#message').append("%= j(render 'messages/index', message: @message) %>")と同じ↑-->
 $('#message_content').val("");
