--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,16 +1,25 @@
-<h1 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>">
-  <%= @user.name %> さんとのチャット
-</h1>
+<div class="container mt-5">
+  <div class="row mx-auto">
+    <div class="col-md-10 offset-1">
+      <div class="messages-list shadow p-3 mb-5 bg-white rounded">
+        <h1 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>">
+          <%= image_tag @user.get_profile_image(30,30) %><%= @user.name %> さんとのチャット
+        </h1>
 
-<div id="message" class="message" style="width: 400px;">
-  <%= render "messages/index", messages: @messages %>
+        <div class="messages">
+          <% @messages.each do |message| %>
+            <%= render "messages/index", message: message %>
+          <% end %>
+        </div>
+
+        <div class="errors">
+          <%= render "messages/errors", obj: @message %>
+        </div>
+
+        <div id="message">
+          <%= render "messages/form", message: @message %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-<div class="errors">
-  <%= render "messages/errors", obj: @message %>
-</div>
-
-<%= form_with model: @message, local: false do |f| %>
-  <%= f.text_field :content %>
-  <%= f.hidden_field :room_id %>
-<% end %>
