--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,6 +1,5 @@
 <div class="container px-5 px-sm-0">
   <div class="row mt-3">
-
     <table class="table table-hover table-inverse">
       <!--検索対象モデルがUserの時 -->
       <% if @model == "user" %>
@@ -9,7 +8,7 @@
           <tr>
             <th>image</th>
             <th>name</th>
-            <th colspan="3"></th>
+            <th colspan="5"></th>
           </tr>
         </thead>
         <tbody>
@@ -17,11 +16,27 @@
             <tr>
               <td><%= image_tag user.get_profile_image(50, 50) %></td>
               <td><%= user.name %></td>
+              <td>フォロー:<%= user.followers.count %></td>
+              <td>フォロワー:<%= user.followeds.count %></td>
               <td><%= link_to "show", user_path(user.id) %></td>
+              <td>
+                <% if current_user != user %>
+                  <% if current_user.following?(user) %>
+                    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-block btn-danger" %>
+                  <% else %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-block btn-success" %>
+                  <% end %>
+                <% end %>
+              </td>
+              <td>
+                <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+                  <%= link_to 'chatを始める', message_path(user.id), class:"btn btn-block btn-info" %>
+                <% end %>
+              </td>
             </tr>
           <% end %>
         </tbody>
-      <% elsif @modl == "book" %>
+      <% elsif @model == "book" %>
         <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
         <thead>
           <tr>
@@ -50,14 +65,14 @@
               <td id="favorite_buttons_<%= book.id %>">
                 <%= render "favorites/favorites", book: book %>
               </td>
-              <td>コメント数：<%= book.book_comments.count %></td>
-              <td>閲覧数：<%= book.read_counts.count %></td>
+              <td><i class="fa-regular fa-comment"></i>：<%= book.book_comments.count %></td>
+              <td><i class="fa-regular fa-eye"></i><%= book.read_counts.count %></td>
               <td><%= render "books/static.rate", book: book %></td>
             </tr>
           <% end %>
         </tbody>
       <% else %>
-        <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
+        <!--検索対象モデルがUserではなくBookでもない時(= 検索対象モデルがTagの時) -->
         <thead>
           <tr>
             <th></th>
@@ -71,7 +86,7 @@
           </tr>
         </thead>
         <tbody>
-          <h2>Books search for "<%= @content %>"</h2>
+          <h2>Tag search for "<%= @content %>"</h2>
           <% @records.each do |book| %>
             <tr>
               <td>
@@ -90,14 +105,13 @@
               <td id="favorite_buttons_<%= book.id %>">
                 <%= render "favorites/favorites", book: book %>
               </td>
-              <td>コメント数：<%= book.book_comments.count %></td>
-              <td>閲覧数：<%= book.read_counts.count %></td>
+              <td><i class="fa-regular fa-comment"></i><%= book.book_comments.count %></td>
+              <td><i class="fa-regular fa-eye"></i><%= book.read_counts.count %></td>
               <td><%= render "books/static.rate", book: book %></td>
             </tr>
           <% end %>
         </tbody>
       <% end %>
     </table>
-
   </div>
 </div>
