[Add] グループ機能詳細一覧画面完成、編集オーナーのみ可

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -59,7 +59,7 @@
       <div id="comment">
         <%= render"book_comments/comment", book: @books %>
       </div>
-      <%= render 'book_comments/commentform', book: @books, book_comment: @book_comment %>
+      <%= render "book_comments/commentform", book: @books, book_comment: @book_comment %>
     </div>
   </div>
 </div>
