--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -13,9 +13,11 @@
           <%= book_comment.comment %>
         </td>
         <td>
-          <% if book_comment.user == current_user %>
-            <%= link_to "Destroy", book_book_comment_path(book_comment.book.id, book_comment.id), method: :delete, class:"btn btn-danger md-3", remote:true, data: {"turbolinks" => false}  %>
-          <% end %>
+          <div id="comment">
+            <% if book_comment.user == current_user %>
+              <%= link_to "Destroy", book_book_comment_path(book, book_comment), method: :delete, class:"btn btn-danger md-3", remote:true, data: {"turbolinks" => false}  %>
+            <% end %>
+          </div>
         </td>
       </tr>
       <% end %>
