--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,7 @@
         <%= render "searches/search_form" %>
       </div>
       <h2 class="mt-3">Users</h2>
+      <%= link_to "グループ作成", new_group_path %> | <%= link_to "グループ一覧", groups_path %>
       <table class="table table-hover">
         <thead>
           <tr>
