--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,7 +8,14 @@
 
 
     <div class="col-md-8 offset-md-1">
-      <h2 class="mt-3">Groups</h2>
+      <div class="row">
+        <div class="col">
+          <h2 class="mt-3">Groups</h2>
+        </div>
+        <div class="col">
+          <%= link_to "グループ作成", new_group_path, class:"btn btn-info float-right btn-sm mt-3" %>
+        </div>
+      </div>
       <table class="table table-hover">
         <thead>
           <tr>
@@ -17,6 +24,8 @@
             <th>紹介文</th>
             <th>メンバー数</th>
             <th></th>
+            <th></th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -24,12 +33,22 @@
             <tr>
               <td><%= image_tag group.get_group_image(50, 50) %></td>
               <td><%= link_to group.name, group_path(group) %></td>
-              <td><%= link_to "Show", group, class: "group_#{group.id}" %></td>
+              <td><%= group.introduction %></td>
               <td><%= group.users.count %></td>
-              <% if group.is_owned_by?(current_user) %>
-                <td><%= link_to "Edit", edit_group_path(group), class: "btn btn-success group_#{group.id}" %></td>
-              <% end %>
-          </tr>
+              <td>
+                <% if group.include_user?(current_user) %>
+                  <%= link_to "退出", group_group_users_path(group), method: :delete, class: "btn btn-danger" %>
+                <% else %>
+                  <%= link_to "参加", group_group_users_path(group), method: :post, class: "btn btn-success" %>
+                <% end %>
+              </td>
+              <td>
+                <% if group.is_owned_by?(current_user) %>
+                  <%= link_to "Edit", edit_group_path(group), class: "btn btn-success btn-sm group_#{group.id}" %>
+                  <%= link_to "Destroy", group_path(group), method: :delete, "data-confirm" => "本当に消しますか？",class:"btn btn-danger btn-sm" %>
+                <% end %>
+              </td>
+            </tr>
           <% end %>
         </tbody>
       </table>
