--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,11 @@
           <% end %>
         </li>
         <li class="nav-item">
+          <%= link_to groups_path, class: "nav-link text-light" do %>
+           <i class="fa-solid fa-comments"></i> Groups
+          <% end %>
+        </li>
+        <li class="nav-item">
           <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
            <i class="fa-solid fa-sign-out-alt"></i> Log out
           <% end %>
