--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -47,8 +47,10 @@
   </div>
 </div>
 
-<div class="row mt-3">
-  <%= link_to edit_user_path(user.id), class:"btn btn-block btn-outline-secondary mb-3" do %>
-      <i class="fa-solid fa-user-cog"></i>
-  <% end %>
-</div>
+<% unless user.guest_user? %>
+  <div class="row mt-3">
+    <%= link_to edit_user_path(user.id), class:"btn btn-block btn-outline-secondary mb-3" do %>
+        <i class="fa-solid fa-user-cog"></i>
+    <% end %>
+  </div>
+<% end %>
